@@ -12,15 +12,11 @@ METHODS
     new(%parameters)
              Constructor.
 
-            *       "color_random"
-
-                     Random color flag.
-                     Default value is 1.
-
             *       "color"
 
                      Color of image.
                      Default value is undef.
+                     Undefined value means random color.
 
             *       "height"
 
@@ -53,7 +49,6 @@ METHODS
 ERRORS
      new():
              Bad background color definition. Use Imager::Color object.
-             Color isn't set.
              Suffix '%s' doesn't supported.
              From Class::Utils:
                      Unknown parameter '%s'.
