@@ -1,6 +1,7 @@
 0.06
  - Add tests.
  - Fix 'color' parameter default value in doc.
+ - Simplify code (remove 'color_random' parameter).
 
 0.05 2014-10-24T01:12:29+02:00
  - Add Image::Select to SEE ALSO section in doc.
